Татьяна вносила изменения

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Bootstrap3</title>
+	<title>Lesson8</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-	<h1 class="text-center">Hello, world!</h1>
+	<h1 class="text-center">Наш синхронизированный сайт</h1>
+	<h2>Татьяна внесла изменения на сайт</h2>
 	
 </body>
 </html>
